--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: "Academic Blacklist"
+title: "Honest Academia"
 description: "A project for postdocs: reviews of unethical academic supervisors and research labs."
 baseurl: "/WillBeRenamedLater_HA"
 url: "https://cherepan.github.io"
